# cyborgdb-poc-secure-cv

./: .gitignore  README.md  dev.py  docker-compose.yml  test_key.py  verify_setup.py
backend/: .env.example  delete_index.py  main.py  pyproject.toml  requirements.txt  seed_candidates.py  setup.py
backend/app/: config.py  database.py
backend/app/api/: auth.py  cv.py  profile.py  search.py  security.py
backend/app/middleware/: __init__.py  audit.py  auth.py  security.py
backend/app/models/: __init__.py  auth.py  database.py  search.py  user.py  vector.py
backend/app/services/: advanced_search_service.py  audit_service.py  auth.py  cv_processor.py  cyborgdb_service.py  monitoring_service.py  notification_service.py  saved_search_service.py  search_service.py  upload_queue.py  vector_service.py
backend/app/utils/: validation.py
backend/migrations/: 001_initial_schema.py  002_add_saved_searches.py  migrate.py
backend/tests/: test_auth.py  test_cv_processing.py  test_main.py  test_profile.py  test_search.py  test_security.py
frontend/: .env.example  package-lock.json  package.json  setup.sh
frontend/public/: index.html
frontend/src/: App.test.tsx  App.tsx
frontend/src/components/: Router.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/services/: api.ts
test_cvs/: 01_software_engineer.txt  02_data_scientist.txt  03_product_manager.txt  04_ux_designer.txt  05_devops_engineer.txt  06_marketing_manager.txt  07_financial_analyst.txt  08_hr_manager.txt  09_sales_executive.txt  10_project_manager.txt  convert_to_pdf.py
(+14 files in other folders)
